delete voter bonus, delete account permission, delete account group
